--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,12 @@
     <name>ByteBuddy Test</name>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- <maven.compiler.source>21</maven.compiler.source> -->
+        <!-- <maven.compiler.target>21</maven.compiler.target> -->
+        <!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
+
+				<!-- <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> -->
+				<!-- <maven.compiler.release>21</maven.compiler.release> -->
     </properties>
 
     <dependencies>
@@ -37,8 +40,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
+                    <!-- <source>21</source> -->
+                    <!-- <target>21</target> -->
+										<release>21</release>
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
